@@ -1,11 +1,11 @@
 {
   "timestamp" : "2022-05-16T00:39:59Z",
-  "count" : 1,
-  "count_minmax" : [ 0, 1 ],
+  "count" : 0,
+  "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 1,
   "count_prev_day_dec" : 0,
-  "uniques" : 1,
-  "uniques_minmax" : [ 0, 1 ],
+  "uniques" : 0,
+  "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
