@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-15T08:10:12Z",
+  "timestamp" : "2022-05-16T00:39:59Z",
   "count_outdated" : 20,
   "uniques_outdated" : 15,
-  "count" : 28,
-  "uniques" : 22,
+  "count" : 29,
+  "uniques" : 23,
   "clones" : [
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
