@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 6,
+  "count": 9,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
