@@ -1,3 +1,10 @@
+2022-05-16T00:39:59Z:
+* notice: last 14d: all unq: 9 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 20 15 / 28 22
+* notice: next accum: outdated-all outdated-unq / all unq: 20 15 / 29 23
+* notice: prev json diff / prev day diff: unq all: +1 +1 -0 -0 / +1 +1 -0 -0
+* notice: changed dates: [2022-05-15]
+
 2022-05-15T08:10:12Z:
 * notice: last 14d: all unq: 8 6
 * notice: prev accum: outdated-all outdated-unq / all unq: 18 13 / 28 22
